[package]
name = "chat_server"
version = "0.1.0"
authors = ["Christopher Chen <christopherchen2018@u.northwestern.edu>", "Alex Cohen <alexcohen2018@u.northwestern.edu>", "Thornton Uhl <thorntonuhl2018@u.northwestern.edu>", "Kevin Wilde <kevinwilde2018@u.northwestern.edu>"]

[dependencies]
time = "0.1"
